name:                AOC2104
version:             0.1.0.0
synopsis:            Advent of code 2021 day 4
description:         Advent of code 2021 day 4
-- license:             
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
category:            Other
build-type:          Simple
cabal-version:       >=1.10

executable AOC2104
  main-is:             AOC2104.hs

  other-modules:       BingoSubsystem
                     , Board
                     , Row
                     , Mark
                     , Bingo

  other-extensions:    OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , LambdaCase

  build-depends:       base >= 4.12

                     , AOC
                     , QuickCheck
                     , containers >=0.5
                     , text

  -- hs-source-dirs:      
  default-language:    Haskell2010

  ghc-options: -fwarn-incomplete-patterns -Werror=incomplete-patterns -Wall

