name:                AOC2105
version:             0.1.0.0
synopsis:            Advent of code 2021 day 5
description:         Advent of code 2021 day 5
-- license:             
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
category:            Other
build-type:          Simple
cabal-version:       >=1.10

executable AOC2105
  main-is:             AOC2105.hs

  other-modules:       Vent
                     , Point
                     , Orientation
                     , Histogram


  other-extensions:    OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , LambdaCase

  build-depends:       base >= 4.12

                     , AOC
                     , QuickCheck
                     , containers >=0.5
                     , text

  -- hs-source-dirs:      
  default-language:    Haskell2010

  ghc-options: -fwarn-incomplete-patterns -Werror=incomplete-patterns -Wall

